SecurityConfig : 로그인 완료, 로그아웃 완료시 /home 매핑으로 이동 Home.css : 메인 베너 이동 버튼 z-index를 통해 맨 위로, upload 팝업창 및 bg_gray1 위치 화면에 고정(fixed) MemberController : 회원가입 완료시 /home 매핑으로 이동, my-page 오류 매핑 home으로 수정 Home.html : 메인 팝업 1 : 왼쪽 이동 삭제, 메인 팝업 3 : 오른쪽 이동 삭제, 내 스토리 등록하기 버튼 : 로그인 안했을 경우 팝업 표시, 로그인 했을 경우 upload 팝업 표시, 푸터 팝업 함수명 변경 showpopupf Home.js : 푸터 팝업 함수명 변경 showpopupf, 슬라이드 함수 수정(간소화 및 기능), 로그인 로그아웃시 home으로 이동 추가, 로그인시 프로필 이미지로 바뀌는거 깔끔하게 변경

--- a/src/main/resources/static/css/Home.css
+++ b/src/main/resources/static/css/Home.css
@@ -34,7 +34,7 @@ hr {
 /* 업로드 팝업창 시작 */
 #bg_gray1 {
   /*업로드 창이 떴을 때 뒷배경 회색처리 */
-  position: absolute;
+  position: fixed;
   display: none; /* 버튼이 안눌러지면 display:none */
   top: 0;
   left: 0;
@@ -58,7 +58,7 @@ hr {
   display: none;
 }
 #bg_gray1 > #Upload_pop_up {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -2645,7 +2645,7 @@ input:focus {
   border: none;
   transform: translate(-50%, -50%);
   margin-left: 56px;
-  border-radius: 50px;
+  z-index: 100; /* 버튼이 다른 요소 위에 오도록 설정 */
   background-color: transparent; /* 배경색을 투명으로 설정 */
 }
 .slide-btn2 {
@@ -2660,7 +2660,7 @@ input:focus {
   border: none;
   transform: translate(-50%, -50%);
   margin-right: 8px;
-  border-radius: 50px;
+  z-index: 100;
   background-color: transparent; /* 배경색을 투명으로 설정 */
 }
 .text-container {
